# Tank-Wars

./: .Makefile.swp  .gitignore  CMakeLists.txt  CMakeLists.txt~  GameProgramming.sln  LICENSE  Makefile  README.md
Animations/: Tank.mb
Content/2D front/: gamethingy.xcf
Content/Animations/: Tank.mb  Tank2T_CenteringOBJs.mb
Content/Hud/Numbers/: Zero.xcf
Content/Shaders/: Basic.fsh  Basic.vsh  DepthQuad.fsh  DepthQuad.vsh  GenShadowMap.fsh  GenShadowMap.vsh  HudSprite.fsh  HudSprite.vsh  Outline.fsh  Outline.vsh  ParticleBillboard.fsh  ParticleBillboard.vsh  SkyBox.fsh  SkyBox.vsh  ToonLighting.fsh  ToonLighting.vsh  ToonTerrain.fsh  ToonTerrain.vsh
Content/Textures/: origins.txt
Source/Game/: Camera.cpp  Camera.h  ExplosionHandling.cpp  ExplosionHandling.h  GLTools.cpp  GLTools.h  Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  Hud.cpp  Hud.h  Image.cpp  Image.cpp~  Image.h  Keyboard.cpp  Keyboard.h  Main.cpp  Main.cpp~  Map.cpp  Map.h  MarchingCubes.cpp  MarchingCubes.h  Material.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  MeshTools.cpp  MeshTools.h  Object.cpp  Object.h  ParticleSystem.cpp  ParticleSystem.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  SkyBox.cpp  SkyBox.h  (+16 more)
